[package]
name = "plankton"
version = "0.1.0"
edition = "2021"

[dependencies]
kelp = { path = "../kelp" }
cxx-qt = "0.8"
cxx-qt-lib = { version = "0.8", features = ["qt_full"] }
cxx-qt-lib-extras = "0.8"

[build-dependencies]
# The link_qt_object_files feature is required for statically linking Qt 6.
cxx-qt-build = { version = "0.8", features = ["link_qt_object_files"] }
