[package]
name = "plankton"
version = "0.1.0"
edition = "2024"

[dependencies]
kelp = { path = "../kelp" }
cxx = "1.0.194"
cxx-qt = "0.8.1"
cxx-qt-lib = { version = "0.8.1", features = ["qt_full"] }
cxx-qt-lib-extras = "0.8.1"

[build-dependencies]
# The link_qt_object_files feature is required for statically linking Qt 6.
cxx-qt-build = { version = "0.8.1", features = ["link_qt_object_files"] }
